[gd_scene load_steps=9 format=3 uid="uid://bycclsaiafy6t"]

[ext_resource type="Script" path="res://Scripts/shop.gd" id="1_daevi"]
[ext_resource type="Texture2D" uid="uid://d0op7a2whx3da" path="res://Assets/shopPanel.png" id="1_dyyjf"]
[ext_resource type="Texture2D" uid="uid://cknen22gehao8" path="res://Assets/button.png" id="2_cbem4"]
[ext_resource type="Texture2D" uid="uid://cb2boub316o0p" path="res://Assets/buttonHovered.png" id="3_el012"]
[ext_resource type="FontFile" uid="uid://cw3h0pbmthd16" path="res://Assets/PixelyFont.ttf" id="5_11axk"]

[sub_resource type="Animation" id="Animation_6oigc"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8yw74"]
resource_name = "transition"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ka4f3"]
_data = {
"RESET": SubResource("Animation_6oigc"),
"transition": SubResource("Animation_8yw74")
}

[node name="Shop" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_daevi")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="ShopLabel" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 1.0
offset_bottom = 71.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("5_11axk")
theme_override_font_sizes/font_size = 32
text = "shop"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ShopTextureRect" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.275
anchor_top = 0.1
anchor_right = 0.725
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_dyyjf")
metadata/_edit_use_anchors_ = true

[node name="TextureButton" type="TextureButton" parent="Background"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="UpgradePickaxeButton" type="TextureButton" parent="Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -160.0
offset_top = 100.0
offset_right = 160.0
offset_bottom = 260.0
grow_horizontal = 2
action_mode = 0
texture_normal = ExtResource("2_cbem4")
texture_hover = ExtResource("3_el012")
stretch_mode = 0

[node name="UpgradePickaxeLabel" type="Label" parent="Background/UpgradePickaxeButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_11axk")
text = "upgrade pickaxe"
horizontal_alignment = 1
vertical_alignment = 1

[node name="UpgradeDrillButton" type="TextureButton" parent="Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -160.0
offset_top = 260.0
offset_right = 160.0
offset_bottom = 420.0
grow_horizontal = 2
action_mode = 0
texture_normal = ExtResource("2_cbem4")
texture_hover = ExtResource("3_el012")
stretch_mode = 0

[node name="UpgradeDrillLabel" type="Label" parent="Background/UpgradeDrillButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_11axk")
text = "upgrade pickaxe:
cost: 1000"
horizontal_alignment = 1
vertical_alignment = 1

[node name="BackButton" type="TextureButton" parent="Background"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = 120.0
offset_right = 80.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2
action_mode = 0
texture_normal = ExtResource("2_cbem4")
texture_hover = ExtResource("3_el012")
stretch_mode = 0

[node name="BackLabel" type="Label" parent="Background/BackButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("5_11axk")
text = "back"
horizontal_alignment = 1
vertical_alignment = 1

[node name="DescriptionLabel" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.00138889
anchor_right = 0.316406
anchor_bottom = 0.997222
theme_override_fonts/font = ExtResource("5_11axk")
text = "description:



"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="StatisticsLabel" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.6875
anchor_top = -0.00277778
anchor_right = 1.00078
anchor_bottom = 1.0
theme_override_fonts/font = ExtResource("5_11axk")
text = "statistics:

stone: 0

pickaxe level: 0/10

drill level: 0/10"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="Transition" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ka4f3")
}

[connection signal="mouse_entered" from="Background/UpgradePickaxeButton" to="." method="_on_upgrade_pickaxe_button_mouse_entered"]
[connection signal="mouse_exited" from="Background/UpgradePickaxeButton" to="." method="_on_upgrade_button_mouse_exited"]
[connection signal="pressed" from="Background/UpgradePickaxeButton" to="." method="_on_upgrade_pickaxe_button_pressed"]
[connection signal="mouse_entered" from="Background/UpgradeDrillButton" to="." method="_on_upgrade_drill_button_mouse_entered"]
[connection signal="mouse_exited" from="Background/UpgradeDrillButton" to="." method="_on_upgrade_button_mouse_exited"]
[connection signal="pressed" from="Background/UpgradeDrillButton" to="." method="_on_upgrade_drill_button_pressed"]
[connection signal="pressed" from="Background/BackButton" to="." method="_on_back_button_pressed"]
